<resources>
    <string name="app_name">Zikub</string>

    <!-- Strings related to login -->
    <string name="prompt_pseudo">Pseudo</string>
    <string name="search_hint">Search music</string>
    <string name="welcom_sentences">Share your favourite music to your friends.</string>
    <string name="terms">Terms &amp; conditions.</string>
    <string name="prompt_search">Search</string>
    <string name="prompt_password">Password</string>
    <string name="invitation_title">Invitations</string>
    <string name="research_title">Research new friends</string>
    <string name="friendslist_title">Friends list</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
